--- a/2021_09_21_altitude.md
+++ b/2021_09_21_altitude.md
@@ -1,6 +1,6 @@
 # Apresentação
 
-Tudo bem, Tarsila. Aqui vai um script detalhado do que vamos fazer, certinho. Espero que curta tanto a análise quanto o programa. Vou dividir em alguns tópicos pra gente entender melhor, certo.
+Aqui vai um script detalhado do que vamos fazer, certinho. Espero que curta tanto a análise quanto o programa. Vou dividir em alguns tópicos pra gente entender melhor, certo.
 - 1. Preparar o dados;
 Daepois os capítuloa.
 - Cap. 1: Gráfico
@@ -64,6 +64,8 @@ p2 <- subset(p2, R == "y")
 #p2 <- subset(p2,RecordedBy!="Valéria Fagundes")
 #p2 <- subset(p2, Locality == "PNC")
 #p2 <- subset(p2, RecordedBy == "Valéria Fagundes")
+
+pbase <- p2
 ```
 Aqui tiramos as células NA ou vazias das colunas de dia, ordem e espécie.
 ```
@@ -72,6 +74,8 @@ Aqui tiramos as células NA ou vazias das colunas de dia, ordem e espécie.
 Primeiro vamos configurar a data (alguns dados não tem dia e nem mês, não vai rolar).
 
 ```
+p2 <- subset(p2, !is.na(Day)) 
+
 p3 <- p2 %>% 
   select(Year, Month, Day) %>% 
   mutate(Date = make_date(Year, Month, Day))
@@ -348,9 +352,308 @@ ggsave("grupo.pdf",width = 10, height = 13, dpi = 6000)
 ### Cap. 2
 
 
+# Apresentação
+Aqui vai um script detalhado do que vamos fazer, certinho. Espero que curta tanto a análise quanto o programa. Vou dividir em alguns tópicos pra gente entender melhor, certo.
+- 1. Preparar o dados;
+Daepois os capítuloa.
+- Cap. 1: Gráfico
+- Cap. 1: Cluster
+- Cap. 1: Gráfico diversidade
+
+- 2. Correlação;
+- 3. Análise de variância;
+- 4. Diversidades das UCs;
+- 5 Gráficos exploratórios.
+
+## 1. Preparar os dados
+#### Informar o R
+Aqui, é importante indicar qual pasta será usada para a análise. Primeiro precisamos indicar a pasta escrevendo o caminho dela dentro do seu computador. Algo como C://usuário.... dentro das aspas. Abaixo o meu:
+```
+getwd()
+setwd("/home/user/Área de Trabalho/Bio/projeto_publ/2020_altitude/2023_cap2") #Mudança de diretório para pasta do projeto
+```
+
+#### Pacotes e entradas de arquivos
+Vamos instalar logo vários pacotes que possivelmente utilizaremos para selecionar dados, afzer gráficos e tal.
+```
+if(!require(pacman, quietly = TRUE))(install.packages("pacman")) #agrupador de funções
+#if(!require(devtools, quietly = TRUE))(install.packages("devtools")) #agrupador de dados
+pacman::p_load(magrittr,dplyr,reshape2) #magrittr para operações de pipe/dplyr para manipulador de dados
+pacman::p_load(ggplot2, ggrepel, graphics, lubridate, tidyquant, tidyverse, tidygraph, patchwork) 
+pacman::p_load(vegan)  #vegan para estatística ecológica/graphics para os gráficos
+pacman::p_load(forcats,iNEXT,tidyr,tibble,iNEXT) #hill,CRAN e riqueza estimada
+
+#pacman::p_load(tidyverse)
+```
+#### Caregar Planilha
+```
+pacman::p_load(openxlsx) 
+caminho.do.arquivo <- "/home/user/Área de Trabalho/Bio/projeto_publ/gradientealt.xlsx"
+planilhatotal <- read.xlsx(caminho.do.arquivo, #local do arquivo
+                           sheet = 1, # em qual planilha estão os dados
+                           colNames = T, # as colunas dos dados possuem nomes?
+                           na.strings = "NA") # como estão identificados os dados omissos?
+
+head(planilhatotal)
+```
+
+Vamos verificar se deu certo puxar a nossa tabela?
+
+`summary(planilhatotal)`
+
+#### Corrigir planilha
+Aqui vamos selecionar os dados. Primeiro vamos atribuir nossa tabela e denominar p2. 
+
+Depois vamos selecionar os dados que queremos por coletores.
+```
+p2 <- planilhatotal
+p2 <- subset(p2, !is.na(Year))
+p2 <- subset(p2, !is.na(Order)) 
+p2 <- subset(p2, !is.na(Species))
+p2 <- subset(p2, !is.na(Altitude)) 
+p2 <- subset(p2, Locality == "PNC")
+
+pbase <- p2
+pdireto <- subset(p2,Data!="Secundary data")
+
+```
+Aqui tiramos as células NA ou vazias das colunas de dia, ordem e espécie.
+```
+```
+#### Teste de plots
+Primeiro vamos configurar a data (alguns dados não tem dia e nem mês, não vai rolar).
+
+```
+p3 <- pdireto %>% 
+  select(Year, Month, Day) %>% 
+  mutate(Date = make_date(Year, Month, Day))
+
+Date <- data.frame(pdireto,p3)
+Date <- subset(Date, !is.na(Date)) 
+```
+
+`ts.plot(Date$Date)`
+
+Um gráfico um pouco mais elaborado. Vamos plotar as espécies no eixo y e as altitudes no eixo x, com cores vamos diferenciar as UCs. As medidas do gŕafico superior estão escalonados de forma linear.
+
+Agora o gŕafico.
+```
+pacman::p_load(ggside, stringr) 
+
+ggplot(p2, aes(x = Altitude, y = CodSp, colour = Order)) + 
+  geom_jitter(size = 6, alpha = 0.4) + 
+  #geom_violin(aes (Colour = Species), orientation = "y", alpha = 0.5) + 
+  geom_xsidedensity(aes(y = after_stat(scaled), group = Order, fill = Order),alpha = 0.5, size = 1, position = "stack", outline.type = "full") + #after_stat(count) é a contagem.
+  #geom_xsideboxplot(aes(fill = Order),alpha = 0.5, orientation = "y") +
+  #facet_grid(Order~., scales = "free_y", space = "free_y") +
+  scale_color_tq() +
+  scale_fill_tq() +
+  theme_tq() 
+#ggsave("order.pdf",width = 10, height = 6, dpi = 300)
+
+```
+## 1. Cap. 2: Gráficos
+### Acumulação para dados primários
+
+Podemos fazer alguns tipos de gráficos de acumulação, veremos a seguir em três etapas, primeiro selecionando a tabela.
+```
+acum<-reshape2::dcast(Date, Date ~ Species, value.var = "individualCount", fun = sum)
+acum=data.frame(acum, row.names=1)
+
+sp1<-specaccum(acum,method="rarefaction")
+sp2<-specaccum(acum,method="exact")
+sp3<-specaccum(acum,method="random")
+sp4<-specaccum(acum,method="collector")
+
+
+#par(mgp=c(1,1,0)) #exportar a imagem
+#png(filename="/home/user/Área de Trabalho/Serviços/ES - BaixoGuandu/2021_06_30_granitos_itaguacu/R/1.Acumul.png",width=800,height=600) #local e tmamanho
+par(mfrow=c(2,2)) 
+plot(sp1, ci.type="poly", col="black", lwd=2, ci.lty=0, ci.col="lightblue",xlab="Sampling points",ylab="Rarefection")
+plot(sp2, ci.type="poly", col="black", lwd=2, ci.lty=0, ci.col="lightgrey",xlab="Dias de amostragem",ylab="Riqueza Esperada")
+plot(sp3, ci.type="poly", col="black", lwd=2, ci.lty=0, ci.col="yellow",xlab="Dias de amostragem",ylab="Sítios Aleatórios")
+plot(sp4, ci.type="poly", col="black", lwd=2, ci.lty=0, ci.col="lightblue",xlab="Dias de amostragem",ylab="Curva do Coletor")
+par(mfrow=c(1,1)) #compilado de curvas
+#dev.off()
+```
+OU ainda
+```
+acum<-reshape2::dcast(Date, Date ~ Species, value.var = "individualCount", fun = sum)
+acum=data.frame(acum, row.names=1)
+
+sp1<-specaccum(acum,method="rarefaction")
+sp4<-specaccum(acum,method="collector")
+
+pdf("2023_acum_rare.pdf", width = 8, height = 6)  # Substitua "grafico.png" pelo nome do arquivo desejado
+
+plot(sp1, col = "blue", xlab = "Sampling points", ylab = "Richness")
+
+lines(sp4, col = "red")
+legend("topleft", legend = c("Rarefaction", "Collector"), col = c("blue", "red"), lty = 1, cex = 0.8)
+
+dev.off()
+
+```
+
+### Cluster para definir os grupos em altitude
+Cluest baseado em jaccard para definir os agrupamentos, conseidaramos aqui os dados binários.
+```
+pacman::p_load("ade4")
+
+local<-reshape2::dcast(p2, Altitude ~ Species) #, value.var = "Kingdom", fun.aggregate = NULL)
+local=data.frame(local, row.names=1)
+local$binário<-ifelse(local>1, 1, 0)
+localb=as.data.frame(local$binário)
+
+S <- specnumber(localb)
+localb<-data.frame(S, localb) 
+
+#local <- local %>%   subset(S > 4)
+
+d <- dist.binary(localb, method = 1, diag = FALSE, upper = FALSE) 
+#method 1 is Jaccard index (1901) S3 coefficient of Gower & Legendre
+hc <- hclust(d)               # apply hierarchical clustering 
+#par(mgp=c(1,1,0)) #exportar a imagem
+#png(filename="/home/user/Área de Trabalho/Música/5.clust_gen_pais.png",width=800,height=600) #local e tmamanho
+plot(hc, labels=localb$Altitude)    # plot the dendrogram
+#dev.off()
+```
+### Gráfico lateral
+
+Vamos a outro gráfico lateral:
+Primeiro o pacote. 
+```
+pacman::p_load(ggside, tidyverse,tidyquant,ggExtraPlot)
+
+```
+Agora o gráfico, considerando a abundância:
+```
+p4 <-p2 %>%
+  ggplot(aes(Altitude, Species, color = Data)) +
+  geom_point(alpha = 0.2, size = 4) +
+  geom_boxplot() +
+  #geom_smooth(aes(color = NULL), se=TRUE) +
+  geom_xsidedensity(aes(y = after_stat(scaled),fill = Altitude),alpha = 0.5,size = 1, position = "stack") +
+  facet_grid(p2$Order~., scales = "free_y", space = "free_y") + 
+  scale_color_tq() +
+  scale_fill_tq() +
+  theme_tq() +
+  labs(title = "Altitudinal distribution", subtitle = "",
+       x = "Altitude", y = "Species") +  theme(ggside.panel.scale.x = 0.2, ggside.panel.scale.y = 0.2)
+plot(p4)
+#ggsave("overlap.pdf",width = 12, height = 8, dpi = 600)
+#geom_ysidedensity(aes(x = after_stat(density),
+    #fill = Order),alpha = 0.5,size = 1, position = "stack") +
+```
+Testar geon_density
+
+
+### Valores de diversidade
+Vamos calcular ínideces de riqueza, abundância e estimativa de riqueza para os subgrupos.
+
+#### Gráfico de acumulação
+Primeiro um gráfico de aculação de espécie por altitude
+
+```
+p2 <- pdireto
+acum<-reshape2::dcast(p2, Altitude ~ Species, value.var = "individualCount", fun = sum)
+acum=data.frame(acum, row.names=1)
+
+sp4<-specaccum(acum,method="collector")
+shannon<-diversity(acum)
+spAbund<-rowSums(acum)
+
+acum<-reshape2::dcast(p2, Altitude ~ Species, value.var = "individualCount", fun = sum)
+p3<-data.frame(shannon,spAbund,sp4$sites,sp4$richness,acum)
+```
+E plotar
+```
+ggplot(p3, aes(x = sp4.richness, y = Altitude)) + 
+  geom_line(size=6, alpha=0.6, color="Gray") + #geom_line(aes(group = sp4.sites))
+  geom_point(aes(size=spAbund), alpha=0.3) +
+  geom_label_repel(aes(label = sp4$richness), size=4, alpha=0.8, #funciona no zoom
+                   box.padding   = 0.35, 
+                   point.padding = 0.75,
+                   segment.color = 'grey50') +
+  scale_size(range = c(.1, 24), name="Abundance") +
+  #geom_text(aes(label = a$sp4.richness),col = 'black',size = 5) +
+  labs(title="", subtitle="Total", y="Altitude",x="Richness", caption="",
+       color = "", size = "Abundance") +
+  theme(axis.title = element_text(size = 18),
+        axis.text = element_text(size = 14)) + 
+  scale_color_tq() +
+  scale_fill_tq() +
+  theme_tq() 
+  
+#ggsave("Acum2.pdf",width = 14, height = 6, dpi = 600)
+```
+#### Estimativa de riqueza
+Agora a estimativa de riqueza
+
+```
+
+p3<-reshape2::dcast(Date, Date ~ Species, value.var = "individualCount", fun = sum)
+p3=data.frame(p3, row.names=1)
+
+pool<-specpool(p3)
+pool
+
+pool <- poolaccum(p3)
+#summary(pool, display = "jack1")
+plot(pool)
+
+```
+Agora por grupos. Pode seer:
+
+- Locality;
+- Band;
+- Group;
+- Order.
+
+```
+#p3 <- subset(Data, Empresa == "XXX")
+
+p3<-reshape2::dcast(Date, Date + Order ~ Species, value.var = "individualCount", fun = sum)
+excluir <- c("Date", "Order")
+p3 <- p3[,!(names(p3)%in% excluir)]
+p4<-reshape2::dcast(Date, Date + Order ~ Class, value.var = "individualCount", fun = sum)
+
+pool<-specpool(p3, p4$Order) 
+pool
+
+boxplot(pool$chao) 
+
+```
+Agora um gráfico unificado.
+
+```
+local<-reshape2::dcast(p2, Species ~ Order, value.var = "individualCount", fun.aggregate = sum)
+local=data.frame(local, row.names=1)
+
+# Mude o q para 1 para comparar a diversidade de Shannon e para 2 para Simpson
+
+out <- iNEXT(local, q = 0,
+             datatype = "abundance",
+             size = seq(0, 800, length.out=20))
+
+R <- ggiNEXT(out, type = 1) +
+  theme_bw() +
+  labs(fill = "Áreas") +
+  #xlab("Riqueza) + 
+  #ylab("Tempo") +
+  scale_shape_manual(values = 0:19) +
+  theme_classic() +
+  theme(axis.title = element_text(size = 18), 
+        axis.text = element_text(size = 14), legend.position="bottom")
+
+R
+```
+
 ## Correlação
 Vamos testar a correlação dos dados.
 ```
+pbase <- p2
+
 p2 %>% 
   subset(Altitude  > 0) %$% #escolher a partir dos dados (relação de alt com as anos)
   cor.test(Altitude, Year) #correlação dos dados selecionados, numéricos
@@ -393,13 +696,61 @@ b<-glm(Altitude ~ Species, data = p2)
 jtools::plot_summs(b)
 plot_summs(b, scale = TRUE, plot.distributions = TRUE, inner_ci_level = .9)
 ```
-E para as localidades:
+E para os tipos de dados:
 ```
-fit <- lm(Altitude ~ Locality, data = p2) #some os primeiros de cada grupo
+fit <- lm(Altitude ~ Data, data = p2) #some os primeiros de cada grupo
 summ(fit)
 effect_plot(fit, pred = Order, interval = TRUE, plot.points = TRUE) #não faz sentido
 plot_summs(fit, scale = TRUE, plot.distributions = TRUE, inner_ci_level = .9)
 ```
+Agora, vamos ver se a diferença entre dados primários e secundários.
+
+```
+# Dividir os dados em grupos separados
+grupo_primario <- p2$Altitude[p2$Data == "Primary data"]
+grupo_secundario <- p2$Altitude[p2$Data == "Secundary data"]
+
+# Realizar o teste t de Student para comparar as médias entre os grupos
+resultado_teste <- t.test(grupo_primario, grupo_secundario)
+print(resultado_teste)
+```
+Agora vamos ver a média por espécie considerando dados primários e secundários.
+
+```
+p2 <- subset(p2, !is.na(Data)) 
+lista_especies <- unique(p2$Species)
+
+# Removendo linhas com dados faltantes na coluna 'Data'
+p2 <- p2[complete.cases(p2$Data), ]
+
+# Calculando as médias de altitude para cada espécie e classificação
+resultado <- aggregate(Altitude ~ Species + Data, data = p2, FUN = mean)
+
+# Visualizando o resultado
+print(resultado)
+
+
+Agora, a diferença das medianas entre as espeçies. 
+
+for (especie in lista_especies) {
+  dados_especie <- p2[p2$Species == especie, ]
+  grupo_primario <- dados_especie$Altitude[dados_especie$Data == "Primary data"]
+  grupo_secundario <- dados_especie$Altitude[dados_especie$Data == "Secundary data"]
+  
+  # Verificar se ambos os grupos têm mais de uma observação
+  if (length(grupo_primario) > 1 & length(grupo_secundario) > 1) {
+    diferenca_medianas <- median(grupo_primario) - median(grupo_secundario)
+    
+    cat("Espécie:", especie, "\n")
+    cat("Diferença das medianas:", diferenca_medianas, "\n\n")
+  } else {
+    cat("Não há dados suficientes para a espécie", especie, "\n\n")
+  }
+}
+
+
+```
+
 
 ### Normalidade
 Teste de significância CRD (CV, Shapiro-Wilk, Homogenety, Tukey) com o pacote #Expdes - pacote de análise, normalidade, Turkey, shapiro-wilk e afins, onde as tabelas tem que ser iguais.
@@ -407,7 +758,7 @@ Teste de significância CRD (CV, Shapiro-Wilk, Homogenety, Tukey) com o pacote #
 pacman::p_load(ExpDes, ExpDes.pt, fitdistrplus) 
 crd(p2$Species, p2$Altitude, mcomp = "tukey", sigF = 0.01, sigT = 0.01)
 ```
-Não foi considerado normal,homocedástico,Tukey deu todos diferentes (ele separou as localidades, talvez usar). Vamos ver em um gráfico:
+Foi considerado normal,homocedástico,Tukey deu todos diferentes (ele separou as localidades, talvez usar). Vamos ver em um gráfico:
 ```
 pacman::p_load(fitdistrplus) #análise de normalidade
 shapiro.test(p2$Altitude) #ho-normal / dados não normal
@@ -424,26 +775,35 @@ denscomp(fit.MF.normal, addlegend=TRUE)
 
 Krustal
 ```
-kruskal.test(Altitude~Locality, data = p2)       
+kruskal.test(Altitude~Data, data = p2)       
 
 g1 <- p2 %>% 
-  mutate(RecordedBy = as.factor(Locality)) %>% 
+  mutate(RecordedBy = as.factor(Data)) %>% 
   ggplot() +
-  geom_boxplot(aes(y = Altitude, x = Locality)) +
+  geom_boxplot(aes(y = Altitude, x = Data)) +
   labs(x = 'RecordedBy', y = 'Altitude', 
        title = 'Boxplot de consumo') + theme_classic()
        
 g1 
 ```
-Fazer com as classes
+
+
+
+
+
+## Outros testes
 ```
-pairwise.wilcox.test(p2$Cem,
-                          p2$Cem,
+pairwise.wilcox.test(p2$Altitude,
+                          p2$Data,
                           p.adjust.method="bonferroni")
+
+```
+Cluster
+```
 
 pacman::p_load("ade4")
 
-local<-reshape2::dcast(p2, Cem ~ Species) #, value.var = "Kingdom", fun.aggregate = NULL)
+local<-reshape2::dcast(p2, Ecoregion ~ Species) #, value.var = "Kingdom", fun.aggregate = NULL)
 local=data.frame(local, row.names=1)
 #local$binário<-ifelse(local>1, 1, 0)
 #localb=as.data.frame(local$binário)
@@ -462,16 +822,6 @@ plot(hc, labels=localb$Altitude)    # plot the dendrogram
 #dev.off()
 
 ```
-
-
-
-
-
-
-
-
-
-
 
 
 ### Gráficos exploratórios:
