--- a/2021_07_13_PEFG_PEMF.md
+++ b/2021_07_13_PEFG_PEMF.md
@@ -16,10 +16,12 @@ setwd("/home/user/Área de Trabalho/Bio/projeto_publ/2021_tarsila")
 #### Pacotes e entradas de arquivos
 Vamos instalar logo vários pacotes que possivelmente utilizaremos para selecionar dados, afzer gráficos e tal.
 ```
-if(!require(pacman, quietly = TRUE))(install.packages("pacman")) 
-pacman::p_load(magrittr,dplyr) 
-pacman::p_load(ggplot2, devtools, ggrepel, graphics) 
-pacman::p_load(vegan,lubridate) 
+if(!require(pacman, quietly = TRUE))(install.packages("pacman")) #agrupador de funções
+#if(!require(devtools, quietly = TRUE))(install.packages("devtools")) #agrupador de dados
+pacman::p_load(magrittr,dplyr,reshape2) #magrittr para operações de pipe/dplyr para manipulador de dados
+pacman::p_load(ggplot2, ggrepel, graphics, lubridate, tidyquant, tidyverse, tidygraph, patchwork) 
+pacman::p_load(vegan)  #vegan para estatística ecológica/graphics para os gráficos
+pacman::p_load(forcats,iNEXT,tidyr,tibble,iNEXT) #hill,CRAN e riqueza estimada
 ```
 
 #### Caregar Planilha
@@ -54,7 +56,6 @@ p2 <- subset(p2, City == "Castelo")
 Aqui tiramos as células NA ou vazias das colunas de dia, ordem e espécie.
 ```
 p2 <- subset(p2, !is.na(Day))
-p2 <- subset(p2, !is.na(Date))
 p2 <- subset(p2, !is.na(Order)) 
 p2 <- subset(p2, !is.na(Species)) 
 ```
@@ -83,8 +84,10 @@ ggplot(Date, aes(x = Date, y = Species, colour = Order)) +
   #geom_smooth(method = lm, se = TRUE) + 
   #scale_x_continuous(breaks = 0:1) +
   #scale_x_date(date_labels = "%Y %m %d") +
-  facet_grid(Locality~.) +
-  theme_classic()
+  facet_grid(Locality~., scales = "free_y", space = "free_y") +
+  scale_color_tq() +
+  scale_fill_tq() +
+  theme_tq() 
 #ggsave("1.Species/Data.png",width = 10, height = 6, dpi = 300)
 ```
 
@@ -101,29 +104,37 @@ Agora vamos selecionar a UC. Primeiro para PEFG atribuindo uma seleção e denom
 `p3 <- subset(Date, Locality == "PEFG")`
 
 Vamos montar uma tabela utilizando a data de coleta pelas espécies coletadas. Utilizamremos como base a planilha p3 só com PEFG e denominar de acum.
-```
-acum<-reshape2::dcast(p3, Date ~ Species)
-acum=data.frame(acum, row.names = 1)
-```
 
-Vamos ver?
-`head(acum)`
+```
+acum1<-reshape2::dcast(p3, Date ~ Species)
+acum1=data.frame(acum1, row.names = 1)
 
-Agora um gráfico simples de acumualção.
 ```
-acumplot<-specaccum(acum) 
-acumplot
-plot(acumplot)
+Vamos ver PEMF
 ```
+p3 <- subset(Date, Locality == "PEMF")
 
-Fazer aquele upgride aqui.
-```
-plot(acumplot,ci.type="poly",col="black",lwd=2,ci.lty=0,ci.col="lightgrey",ylab="Riqueza",
-     xlab="Dias amostrais",main="Curva de acumulação de espécies para o Parque Estadual do Forno Grande",las=1,font=1.5,font.lab=1.5,cex.lab=1,cex.axis=1) 
-```
+acum2<-reshape2::dcast(p3, Date ~ Species)
+acum2=data.frame(acum2, row.names = 1)
 
+```
+  
 #### PEMF
-Fazer de novo, só lembrar de trocar em p3... Locality == "PEMF") e na legenda.
+Vamos fazer paraas duas:
+
+```
+sp1<-specaccum(acum1,method="rarefaction")
+sp4<-specaccum(acum2,method="rarefaction")
+
+pdf("2023_acum_rare.pdf", width = 8, height = 6)  # Substitua "grafico.png" pelo nome do arquivo desejado
+
+plot(sp1, col = "blue", xlab = "Sampling points", ylab = "Richness")
+
+lines(sp4, col = "red")
+legend("topleft", legend = c("PEFG", "PEMF"), col = c("blue", "red"), lty = 1, cex = 0.8)
+
+dev.off()
+```
 
 
 ### 3. Análise de variância entre as UC
@@ -171,7 +182,12 @@ ggboxplot(p3, x = "Locality", y = "Mammalia", color = "Locality", alpha = 0.5,
     palette = c("#ff4308", "#00AFBB"), 
     fill = "Locality", 
     order = c("PEMF", "PEFG"), 
-    ylab = "Abundância", xlab = "UCs")
+    ylab = "Abundance", xlab = "Conservation units") +
+    scale_color_tq() +
+    scale_fill_tq() +
+    theme_tq() 
+    
+#ggsave("Abundancia  por data.png",width = 10, height = 6, dpi = 300)    
 ```
 Para vermos as médias é:
 
